@@ -74,7 +74,7 @@ typedef struct md_srv_conf_t {
     const char *ca_agreement;          /* accepted agreement uri between CA and user */ 
     struct apr_array_header_t *ca_challenges; /* challenge types configured */
 
-    md_t *current;                     /* md currently defined in <ManagedDomain xxx> section */
+    md_t *current;                     /* md currently defined in <MDomainSet xxx> section */
     md_t *assigned;                    /* post_config: MD that applies to this server or NULL */
 } md_srv_conf_t;
 
